# mtg-price-bot

./: .drone.yml  .env.template  .gitignore  .gitlab-ci.yml  .golangci.yaml  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  README.md  README_RU.md  apigw.yaml  deploy.sh  docker-compose-dev.yaml  docker-compose.yaml  flake.nix  go.mod  go.sum  justfile  main.go  run.sh
.github/workflows/: deploy.yaml  deploy.yml
ansible/: playbook.yml
assets/: additional_cards.json
caching/: cache_test.go  client.go  secrets.go
cardsinfo/: format.go  internals_test.go  names.go  names_test.go  price_format_test.go  prices.go  scgprices.go  structs.go
cmd/bot/: main.go
cmd/go-mtg-vk/: main.go
cmd/telegram/: main.go
cmd/vk/: main.go
internal/caching/: cache.go  cache_test.go  client.go  secrets.go
internal/cardsinfo/: card.go  fetcher.go  format.go  format_test.go  names.go  names_test.go  price_format_test.go  prices.go  prices_test.go  structs.go
internal/dicttranslate/: find.go  find_test.go  match.go  match_test.go
internal/scenario/: scenario.go  scenario_test.go  test_cache.go  test_ctx.go  test_info_fetcher.go  test_sender.go
internal/telegram/: handler.go  sender.go  sender_test.go
internal/vk/: format.go  format_test.go  handler.go  handler_test.go  handlers.go  message.go  secrets.go  sender.go  sender_test.go  structs.go  test_cache.go  (+3 more)
jenkins/: Dockerfile  run.sh
scripts/: spoiler_fetcher.py
src/: main.go  main.rs
tests/: cache_test.go  names_test.go  price_format_test.go  prices_test.go
vk/: handlers.go  message.go  secrets.go  structs.go
(+3 files in other folders)
