[package]
name = "mtg-price-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.3"
regex = "1.10.2"
reqwest = "0.11.23"
scryfall = "0.14.2"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
teloxide = "0.12.2"
tokio = { version = "1.35.1", features = ["full"] }
