[package]
name = "mtg-price-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.3"
dotenv = "0.15.0"
regex = "1.10.2"
reqwest = "0.11.23"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
teloxide = { version = "0.12.2", features = ["webhooks-axum"] }
tokio = { version = "1.35.1", features = ["full"] }
